[package]
name = "teapot"
version = "0.1.0"
edition = "2021"
description = "HTTP Status Command Line"
authors = ["Jose Bovet Derpich <jose.bovet@gmail.com>"]
license = "GNU"
readme = "README.md"
repository = "https://github.com/jbovet/teapot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
http = "0.2.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
comfy-table = "6.1.3"
strum = "0.24"
strum_macros = "0.24"

[[bin]]
name = "teapot"
test = false
doc = true